poc/tests/errors/test_FplNamespaceNotFound_01.fpl
TestTheory
{
    uses Fpl.Commons
    theory {}
}

##############################
FplNamespaceNotFound:3:10: Namespace 'Fpl.Commons' not found